# swallow-evaluation-instruct

./: .env_template  .gitattributes  .gitignore  BENCHMARKS.md  CONTRIBUTORS.md  EVALUATION_POLICY.md  LICENSE  README.md  README_t4_a3_lcl.md  TIPS.md  copy_results.sh  pyproject.toml  serve_LLMs_using_vllm_on_hestia.sh
internal/reasoning_stability_analysis/: README.md  aggregation_functions.py  calculate_reasoning_failure_stats.py  config_benchmarks.py  run_calculate_reasoning_failure_stats.sh  run_calculate_reasoning_failure_stats_local.sh  utils.py
internal/reasoning_stability_diagnostics/: Pipfile  README.md  aggregation_functions.py  bleu_scorer.py  calculate_reasoning_failure_stats.py  config_benchmarks.py  pyproject.toml  refusal_detector.py  run_calculate_reasoning_failure_stats_batch.sh  run_calculate_reasoning_failure_stats_huggingface.sh  run_calculate_reasoning_failure_stats_local.sh  utils.py
lighteval/: Pipfile  pyproject.toml
lighteval/docs/source/: majoirity-at-k-metric.mdx
lighteval/src/lighteval/: main_endpoint.py
lighteval/src/lighteval/metrics/: dynamic_metrics.py  llm_as_judge.py  maj_at_k_solutions.py  metrics_sample.py  pass_at_k_solutions.py  passk_utils.py  sample_metric_utils.py
lighteval/src/lighteval/models/: litellm_model.py  model_input.py  utils.py
lighteval/tests/metrics/: test_maj_at_k_solutions.py  test_majk_utils.py  test_passk_utils.py  test_translation_span_extractor.py
lighteval/tests/models/: test_model_input.py
lighteval/tests/tasks/: test_vendor_syllapy.py
scripts/: aggregate_results.py  debug_en_GPQA.sh  debug_en_HumanEval.sh  debug_en_LiveCodeBench.sh  debug_ja_JHumanEval.sh  debug_ja_MATH-100.sh  debug_ja_MTBench.sh  debug_litellm_OpenAI.sh  debug_litellm_base_models.sh  debug_litellm_reasoning_parser.sh  evaluate_GPQA_batch.sh  evaluate_JGPQA_batch.sh  evaluate_LiveCodeBench_batch.sh  evaluate_LiveCodeBench_batch_with_DeepInfra.sh  evaluate_M-IFEval_batch.sh  evaluate_MATH_batch.sh  evaluate_WMT20_batch.sh  evaluate_WMT20_batch.sh.old  evaluate_WMT20_batch.sh~  evaluate_litellm_OpenAI.sh  serve_vLLM.sh  setup_env.sh  sweep_eval_settings.sh
scripts/aggregate_utils/: conf.py  white_lists.py
scripts/generation_settings/: generation_settings.json  setting_manager.py  task_settings.csv
scripts/generation_settings/custom_model_settings/: common_settings.yaml
scripts/generation_settings/custom_model_settings/Qwen/: Qwen3-14B-Base.yaml  Qwen3-235B-A22B-Instruct-2507.yaml
scripts/generation_settings/custom_model_settings/abeja/: ABEJA-QwQ32b-Reasoning-Japanese-v1.0.yaml
scripts/generation_settings/custom_model_settings/google/: gemini-3-pro-preview.yaml
scripts/generation_settings/custom_model_settings/llm-jp/: llm-jp-3.1-13b-instruct4.yaml  llm-jp-4-32b-a3b-thinking.yaml
scripts/generation_settings/custom_model_settings/nvidia/: Llama-3.1-Nemotron-Nano-8B-v1.yaml  NVIDIA-Nemotron-3-Super-120B-A12B-BF16.yaml  NVIDIA-Nemotron-Nano-9B-v2-Japanese.yaml
scripts/generation_settings/custom_model_settings/openai/: gpt-5-2025-08-07.yaml  (+2 more)
scripts/generation_settings/reasoning_parser/: llmjp4_harmony.py  llmjp4_reasoning_parser.py  multi_parser_loader.py  nemotron_nano_v2_reasoning_parser.py
scripts/qsub/: common_funcs.sh  evaluate_lighteval.sh  qsub_all.sh  qsub_all_sequential.sh  qsub_multi.sh
scripts/qsub/conf/: tasks_runtime.csv
scripts/qsub/environment/: setup_t4_uv_envs.sh
scripts/qsub/utils/: aggregated_results.py  save_and_check_qstat.sh
scripts/utils/: details_viewer.ipynb  provider_request_test.ipynb  pyproject.toml  run_jupyterlab.sh
(+34 files in other folders)
