[project]
name = "swallow-evaluation-instruct-private"
version = "0.0.1"
description = "beta"
readme = "README.md"
requires-python = "==3.10.14"
dependencies = []


[project.optional-dependencies]
auto_detector = [
  "transformers>=5.3.0",
  "sentencepiece",
  "protobuf",
]

aggregate_results = [
    "pandas>=2.2.3",
]

lighteval = [
    "lighteval[math,extended_tasks,litellm,vllm]",
    "transformers>=4.51.0", # Set the floor to allow evaluation of the latest models
    "openai>=1.40.0", # Set the floor to avoid using deprecated names.
    "datasets>=3.6.0,<4.0.0", # Set the floor to prevent uv from downgrading to v2, and the ceiling to avoid breaking changes
    "litellm>=1.75.8", # Set the ceiling to support gpt-oss
    "setuptools<81.0.0", # Pin to <81 to avoid ModuleNotFoundError for pkg_resources
]

vllm = [
  "vllm==0.17.1", # Set the ceiling to support gpt-oss
]


[tool.hatch.metadata]
allow-direct-references = true


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

lighteval = { path = "./lighteval", editable = true }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"


[tool.uv]
conflicts = [
  [
    { extra = "auto_detector" },
    { extra = "aggregate_results" },
    { extra = "lighteval" },
    { extra = "vllm" },
  ],
]
index-strategy = "unsafe-best-match"


[tool.ruff]
ignore = ["F841", "E741"]
fix = true
