[project]
name = "notebook"
description = "A project to run notebook."
version = "0.1.0"
requires-python = "==3.10.14"

dependencies = [
    # for ipynb
    "jupyterlab",
    "ipykernel",

    # for details_viewer.ipynb
    "pandas",
    "pyarrow",
    "fastparquet",

    # for provider_request_test.ipynb
    "lighteval[math,extended_tasks,litellm,vllm]",
    "transformers>=4.51.0,<4.53.0",
    "openai>=1.40.0",
    "datasets<4.0.0",
    "ipywidgets",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"